--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.1.12",
-    "@angular/cdk": "^10.1.3",
+    "@angular/cdk": "^10.2.4",
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~9.0.2",
-    "@angular/material": "^10.1.3",
+    "@angular/material": "^10.2.4",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
@@ -27,7 +27,7 @@
     "bootstrap": "^4.5.2",
     "node-mandrill": "^1.0.1",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^1.14.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -35,9 +35,9 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.67",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
