--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@ngmodule/material-carousel": "^0.6.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.2",
+    "ng-simple-slideshow": "^1.2.9",
+    "ngx-extended-pdf-viewer": "^8.0.0-beta.4",
     "node-mandrill": "^1.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.14.1",
