--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.2",
     "ng-simple-slideshow": "^1.2.9",
+    "ng2-pdf-viewer": "^6.3.2",
     "ngx-extended-pdf-viewer": "^8.0.0-beta.4",
     "node-mandrill": "^1.0.1",
     "rxjs": "~6.5.4",
