--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "^12.2.2",
     "@angular/animations": "^9.1.12",
     "@angular/cdk": "^10.2.4",
     "@angular/common": "~9.0.2",
@@ -30,10 +31,11 @@
     "ng2-pdf-viewer": "^6.3.2",
     "ngx-extended-pdf-viewer": "^8.0.0-beta.4",
     "node-mandrill": "^1.0.1",
+    "pdfjs-dist": "2.5.207",
     "rxjs": "~6.5.4",
+    "schematics-scss-migrate": "^1.3.13",
     "tslib": "^1.14.1",
-    "zone.js": "~0.10.2",
-    "pdfjs-dist": "2.5.207"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
